#                                                                                          #
#                                      Changelog                                           #
#                                                                                          #
############################################################################################

[29] --> [Gundrak] Changes:
                    - Fix Drakkari Elemental.
                   by Thainification.
[28] --> [ICC] Changes:
                - Dark nucleus lose aggro without a reason.
                - Svalna & Crok: add spell Divine Surge, try to fix position problem, misc...
	           by Thainification.
[27] --> Fix player on transports.
[26] --> Fix Pick Lock.
[25] --> Fix pet not returning on target death by other player.
[24] --> Add Updated external mail.
[23] --> Add script Transmogrification.
[22] --> Fix Lifebloom.
[21] --> Project Astranaar.
[20] --> Now priest is energized for each Power Word: Shield that is absorbed or dispelled.
[19] --> [ICC] Big Changes:
               Blood Prince Council:
                - Shadow prison should only hit player.
                - Try to relocate dark nucleus position if spawned out of LoS.
                - Dark nucleus now should follow current target.
                - Properly clear Kinetic Bomb MotionMaster before given new one.
               Professor Putricide:
                - Changed ooze target searching intervals & change amount of stacks.
                - Ooze change target if current target died before explosion.
               Rotface:
                - Make Rotface facing ooze stalker in beginning on casting, instead of after finished.
                - Slime spray now damaging correct target (in front of Rotface when casting).
                - Add immunity.
               Sindragosa:
                - Will continue using Icy Grip / Blistering Cold in phase three.
               Lich King: