@@ -13,6 +13,7 @@ set(scripts_STAT_SRCS
   Custom/hunterpet_vendor.cpp
   Custom/Transmogrification.cpp
   Custom/Transmogrification.h
+  Custom/chat_censure.cpp
 )
 
 message("  -> Prepared: Custom")
